src/style.css
body {
  font-family: "Barlow", sans-serif;
  background-color: #3a1f1b;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)),
    url("../images/seoul-hero.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;
  padding: 286px 100px;
}

header h1 {
  font-weight: 700;
  font-size: 94px;
  line-height: 144px;
  margin: 0;
}

header h3 {
  font-size: 25px;
  font-style: normal;
  font-weight: 900;
  line-height: normal;
  letter-spacing: 5px;
  margin: 0;
}

header h2 {
  font-size: 40px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  margin-bottom: 32px;
  margin: 0 0 32px 0;
}

header a {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;

  text-align: center;
  color: #272044;
  letter-spacing: 3px;
  text-decoration: none;
  text-transform: uppercase;
  background: white;
  padding: 16px 32px;
}

.grid {
  display: grid;
  grid-gap: 50px;
}

.grid-main {
  grid-template-columns: 1fr 1fr;
}

.main-section {
  background: white;
  padding: 100px 50px;
}

.temple-pic {
  max-width: 80%;
  border-radius: 5px;
}

main h4 {
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 5px;
  color: gray;
  text-transform: uppercase;
  margin: 0;
}

main h3 {
  font-size: 40px;
  font-style: normal;
  font-weight: 700;
  line-height: 50px;
  color: #272044;
  margin: 0;
}

main p {
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.5;
  color: #272044;
  opacity: 0.7;
}

section {
  margin: 0 auto;
  padding: 50px;
}

.cards-section {
  background-color: #f8f8f8;
}

.text-centered {
  text-align: center;
}

.grid-3-columns {
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 30px;
}

.grid-2-columns {
  grid-template-columns: 1fr 1fr;
}

.card {
  background-color: white;
  margin: 30px 0;
  border-radius: 5px;
}

.card-header.grid {
  grid-gap: 0;
}

.card-body {
  padding: 30px;
}

.card h4 {
  font-weight: 700;
  font-size: 24px;
  line-height: 1.5;
  color: #272044;
  text-align: center;
}

.yuge-pic {
  max-width: 100%;
}

.embed {
  width: 100%;
  aspect-ratio: 1 / 1;
}

.bunge-pic {
  max-width: 100%;
}
.dong-pic {
  max-width: 100%;
}

.btn {
  display: block;
  color: white;
  font-weight: 700;
  font-size: 14px;
  line-height: 21px;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 16px;
  background-color: #801914;
  text-decoration: none;
}

.gallery {
  background-color: white;
  text-align: center;
}

.h2-gallery {
  text-align: center;
  font-size: 21px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 5px;
  color: gray;
  text-transform: uppercase;
  margin-bottom: 40px;
}

.h3-gallery {
  margin-bottom: 40px;
  text-align: center;
}

footer {
  color: white;
  background: black;
  max-width: 1200px;
  margin: 0 auto;
}

.footer-grid {
  grid-template-columns: 1fr 2fr 2fr;
  grid-gap: 50px;
}

footer h3 {
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

footer p {
  font-size: 15px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

footer ul {
  margin: 0;
}

footer li {
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: 15px;
}

footer a {
  color: white;
  text-decoration: none;
  opacity: 0.7;
}

.seoul-list {
  margin-left: -40px;
}

.about-me-footer {
  padding: 0 10px;
}

.about-website {
  margin-left: 10px;
  margin-right: 0;
}

.project-info-p {
  text-align: center;
  font-size: 10px;
  font-family: monospace;
  margin-top: 40px;
  padding-bottom: 30px;
}

@media (max-width: 1100px) {
  header {
    padding: 110px 0;
  }

  header h1 {
    font-size: 70px;
  }

  header h2 {
    font-size: 20px;
  }

  header h3 {
    font-size: 13px;
  }

  .grid {
    grid-gap: 25px;
  }

  .main-section {
    padding: 50px 30px;
  }
  .grid-main {
    grid-template-columns: 1fr;
  }

  .grid-3-columns {
    grid-template-columns: 1fr;
  }

  section {
    padding: 30px;
  }

  .temple-pic {
    border-radius: 5px;
    margin: 0 auto;
    display: block;
    max-width: 50%;
  }

  main h4 {
    text-align: center;
    margin-bottom: 15px;
  }

  main h3 {
    text-align: center;
    font-size: 25px;
  }

  main p {
    text-align: center;
    font-size: 14px;
  }

  .instagram-container {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  blockquote {
    margin: 0 auto;
    display: block;
  }
}

@media (max-width: 720px) {
  header {
    padding: 60px 0;
  }
  header h1 {
    font-size: 44px;
  }
  header h2 {
    font-size: 16px;
  }
  header h3 {
    font-size: 10px;
  }

  header a {
    font-size: 10px;
  }

  .temple-pic {
    max-width: 40%;
  }

  main h4 {
    font-size: 12px;
  }

  main h3 {
    font-size: 20px;
  }

  .card h4 {
    font-weight: 700;
    font-size: 18px;
  }

  .btn {
    display: block;
    color: white;
    font-weight: 700;
    font-size: 12px;
    line-height: 21px;
    text-align: center;
    letter-spacing: 3px;
    text-transform: uppercase;
    padding: 12px;
    background-color: #801914;
    text-decoration: none;
  }

  .footer-grid {
    grid-template-columns: 1fr;
  }
}

